MAINT: Update doc requirements, update ownership
